--- a/README.Rmd
+++ b/README.Rmd
@@ -9,7 +9,6 @@ knitr::opts_chunk$set(
   echo = TRUE
 )
 
-require("printr")
 ```
 
 
@@ -20,7 +19,7 @@ Welcome to the *epicontacts* package!
 
 [![Travis-CI Build Status](https://travis-ci.org/reconhub/epicontacts.svg?branch=master)](https://travis-ci.org/reconhub/epicontacts)
 
-[![Coverage Status](https://img.shields.io/codecov/c/github/reconhub/epicontacts/master.svg)](https://codecov.io/github/reconhub/epicontacts?branch=master)
+[![Coverage Status](https://codecov.io/github/reconhub/epicontacts/coverage.svg?branch=master)](https://codecov.io/github/reconhub/epicontacts?branch=master)
 
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/epicontacts)](https://cran.r-project.org/package=epicontacts)
 
