--- a/README.Rmd
+++ b/README.Rmd
@@ -182,18 +182,23 @@ functions (e.g. `read.table`, `read.csv`, `gdata::read.xls`).
 ## Simple analyses
 
 First, we plot the *epicontacts* object:
-```{r, plot}
+```{r, eval = FALSE}
 
 plot(x, selector = FALSE)
 
 ```
+[!plot_x.png](figs/plot_x.png)
+
+This is a screenshot of the actual plot. For interactive graphs, see the [introductory vignette](http://www.repidemicsconsortium.org/epicontacts/articles/epicontacts.html).
+
 
 We can look for patterns of contacts between genders:
-```{r, plot_gender}
+```{r, eval = FALSE}
 
 plot(x, "sex", col_pal = spectral)
 
 ```
+[!plot_x_gender.png](figs/plot_x_gender.png)
 
 There is no obvious signs of non-random mixing patterns, but this is worth
 testing. The function `get_pairwise` is particularly useful for this. In its
