fixing broken dep on outbreaks

--- a/vignettes/epicontacts.Rmd
+++ b/vignettes/epicontacts.Rmd
@@ -217,7 +217,7 @@ patterns in a simulated Ebola outbreak. First, we use it to retrieve
 
 ```{r, get_clusters}
 x <- make_epicontacts(ebola_sim$linelist, ebola_sim$contacts,
-                      id = "case.id", to = "case.id", from = "infector",
+                      id = "case_id", to = "case_id", from = "infector",
                       directed = TRUE)
 x
 
