--- a/vignettes/epicontacts.Rmd
+++ b/vignettes/epicontacts.Rmd
@@ -152,7 +152,16 @@ plot(merskor15)
 
 The above is a generic method based on the `vis_epicontacts()` and accepts a
 number of arguments to customize the plot appearance and functionality. For a
-full list of options use `?vis_epicontacts()`. Alternatively, the `method` used
+full list of options use `?vis_epicontacts()`. For instance, one can customize
+nodes using colors and icons:
+```{r}
+plot(merskor15, "place_infect", node_shape = "sex",
+     shapes = c(M = "male", F = "female")) 
+```
+See `codeawesome` to see available shapes.
+
+
+Alternatively, the `method` used
 for plotting can be `graph3D`, in which case a 3-dimensional graph will be used
 (see below).
 
@@ -163,7 +172,7 @@ for plotting can be `graph3D`, in which case a 3-dimensional graph will be used
 the `graph3D()` function[^3].
 
 ```{r}
-graph3D(merskor15, group = "sex", g_title = "MERS Korea 2014")
+graph3D(merskor15, node_color = "sex", g_title = "MERS Korea 2014")
 ```
 
 To interact with the plot:
